# meta-scraper

./: .gitignore  README.md  alembic.ini  pyproject.toml  run.py
alembic/: env.py
alembic/versions/: d99e6f1429b5_initial_schema.py
src/: config.py  events.py  main.py
src/api/: router.py  schemas.py
src/database/: crud.py  models.py  session.py
src/scraper/: fetch_parser.py  inspector.py  instance.py  manager.py  websocket_parser.py
src/ui/: app.py
src/ui/views/: dashboard.py  history.py  logs.py  pipelines.py  playground.py
